# algo-dev

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
celestial_nav/: CMakeLists.txt  lat_from_azimuth_and_altitude.m  main.cpp  test.m
color_conversion/: CMakeLists.txt  color_conversion.cpp  uint8-float.cpp
cubemap/: CMakeLists.txt  main.cpp  solid_angle.cpp  solid_angle.h
division/: CMakeLists.txt  division.cpp
fast_div/: CmakeLists.txt  fast_div.cpp
floating_point/: CMakeLists.txt  binary_print.cpp  binary_print.h  convert.cpp  convert.h  float16.h  main.cpp
modulus/: CMakeLists.txt  modulus.cpp  popcount.cpp  popcount.hpp  readme.txt
shader_templates/: CMakeLists.txt  main.cpp  pshader-types.h
trig/: CmakeLists.txt  exp_log.cpp  exp_log.h  float_bitmanip.cpp  float_bitmanip.h  main.cpp  trig.cpp  trig.h
trig/octave/: exp_approx.m  log2_approx.m  trig_approx.m
variadic_test/: CMakeLists.txt  main.cpp  tuple_test.h
vector_search/: CMakeLists.txt  main.cpp  vector_search.cpp  vector_search.h
vector_sort/: CMakeLists.txt  sse-sort.h  vector_sort.cpp
